A-lanlan/envoy-gateway/sample/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog-service
    service: catalog-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9001
  selector:
    app: catalog-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
      version: v1
  template:
    metadata:
      labels:
        app: catalog-service
        version: v1
    spec:
      serviceAccountName: catalog-service
      containers:
        - image: catalog-service-2.4
          imagePullPolicy: IfNotPresent
          name: catalog-service
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9001
---

# 第三部分：路由规则 (HTTPRoute)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-service
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "www.polarbookstore.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hello/books
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /hello
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Gateway-Region
                value: "ap-southeast-1"
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains"
      backendRefs:
        - name: catalog-service
          kind: Service
          port: 80

    - backendRefs:
        - group: ""
          kind: Service
          name: catalog-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /books
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Gateway-Region
                value: "ap-southeast-1"
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains"
