A-lanlan/envoy-gateway/sample/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
    service: order-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9002
  selector:
    app: order-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
      version: v1
  template:
    metadata:
      labels:
        app: order-service
        version: v1
    spec:
      serviceAccountName: order-service
      containers:
        - image: ghcr.io/lilei6809/order-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: order-service
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9002
---

# 第三部分：路由规则 (HTTPRoute)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-service
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "www.polarbookstore.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: order-service
          port: 9002
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /orders
